Fixed spacing in showcase Added back zoom for some examples Altered props in vl-examples.json

--- a/site/static/main.css
+++ b/site/static/main.css
@@ -431,10 +431,9 @@ footer .edit-page {
   box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
 }
 #showcase .examples {
-  margin: 0 auto;
-  height: 300px;
-  width: 1440px;
-  line-height: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 #showcase .preview {
   width: 180px;
